# mdcat

./: AGENTS.md  README.md  TODO.md  cli.ts  index.html  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.github/workflows/: macos-release.yml
docs/: macos-icon.md  startup-performance.md  testing-with-peekaboo.md
scripts/: install-macos.sh
src/: ipc.ts  main.ts  state.ts  style.css  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file_tree.rs  file_watcher.rs  instance_registry.rs  lib.rs  main.rs
src/components/: context-menu.ts  editor.ts  file-tree.ts  layout.ts  preview.ts  search.ts  toolbar.ts
src/utils/: icons.ts  markdown.test.ts  markdown.ts  scroll-sync.ts  search.test.ts  search.ts  state-bridge.ts  watcher.ts
tasks/: keyboard-shortcuts-raw-mode.md
