[package]
name = "mdcat"
version = "0.1.0"
edition = "2021"

[lib]
name = "mdcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-fs = "2"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
time = { version = "0.3", features = ["formatting", "parsing", "local-offset", "macros"] }

[profile.release]
# Smaller/faster binaries. Startup gains are mostly on cold starts (less disk I/O).
# Tradeoff: slower release builds.
lto = true
codegen-units = 1
strip = true
panic = "abort"
